--- a/style.css
+++ b/style.css
@@ -439,6 +439,9 @@ a {
     .noPrint {
         display: none;
     }
+    .sticky {
+        display: none;
+    }
     .footer {
         width: 100%;
         margin-top: calc(100% / 1.5 - 5%);
